Started cookie recipe project

--- a/ga_project_0/index.html
+++ b/ga_project_0/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
+<html>
 <head>
-<title>Test page</title>
+<title>An html page</title>
 </head>
 <body>
-<h1>Here's my new test page. Still working on it!</h1>
-<p>I'm going to add some info here.
+<p>here’s some text</p>
 </body>
+</html>
