--- a/ga_project_1/index.html
+++ b/ga_project_1/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>The Best Chocolate Chip Cookies</h1>
-<img src="/downloads/cookie_recipe_2/cookies.jpg">
+<img src="file:///Users/sambiddle/Desktop/cookies.jpg">
 <h2>Recipe by: Bonnie Owens</h2>
   <h3>RELATED RECIPES</h3>
    <ul><li>Amazing Chocolate Chip Cookies! <li>Beer and Pretzel Chocolate Chip <li>Cookies Bisquick® Chocolate Chip Cookies 
@@ -31,6 +31,21 @@
                       <li>4 cups chocolate chips 
                         <li>1 cup chopped walnuts or pecans(optional)
   </ul>
-  
+  <h2>How to make Mama's Recipe: The Best Chocolate Chip Cookies</h2>
+  <ol><li>Preheat oven to 350 degrees 
+    <li>Beat butter and sugars together until light and fluffy 
+      <li>Stir in pudding mix milk and vanilla extract. 
+        <li>Beat in eggs. 
+          <li>Add dry ingredients and stir until combined. 
+            <li>Stir in chocolate chips and nuts. 
+              <li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet. 
+                <li>Bake 8-10 minutes or until golden brown. 
+  </ol>
+  <h2>EXPERT TIPS</h2>
+  <p>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!</p>
+  Got questions? Our experts have the answers. <a href="mailto:me@fakeemail.com">Email me!</a>
+  <h2>NUTRITION INFORMATION</h2> 
+  <p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
+  This recipe was altered from Open Source Recipe. For more recipes, <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">go here</a>.
 </body>
 </html>
