--- a/ga_2_about_me/index.html
+++ b/ga_2_about_me/index.html
@@ -5,23 +5,27 @@
 <title>Sam Biddle</title>
 </head>
 <body>
-  <h1 id="IntroHeader">Hi! I'm Sam Biddle and this is my website.</h1>
+  <h1 id="IntroHeader">Hi! I'm Sam Biddle.</h1>
+  <div class="circular"></div>
   <div class="bio">
-  <p>I'm a writer and editor who lives in Brooklyn and commutes to Manhattan most days.</p>
+  <p>I'm a writer and editor who lives in Brooklyn and usually commutes to Manhattan.</p>
   
-  <p>Most of my work has appeared on <a href="http://gizmodo.com">Gizmodo</a>, <a href="http://valleywag.gawker.com"> Valleywag,</a> and <a href="http://gawker.com">Gawker.</a></p>
+  <p>A lot of my work has appeared on <a href="http://gizmodo.com">Gizmodo</a>, and <a href="http://gawker.com">Gawker,</a> and these days, <a href="http://valleywag.gawker.com"> Valleywag.</a></p>
   
   <p>I have appeared frequently on CNN, MSNBC, Bloomberg, CNBC, and NPR.</p>
-  
+I've written about <a href="http://gizmodo.com/5914671/this-is-what-happens-when-anonymous-tries-to-destroy-you">hackers</a>, <a href="http://valleywag.gawker.com/fuck-bitches-get-leid-the-sleazy-frat-emails-of-snap-1582604137">startups</a>, <a href="http://gizmodo.com/5941976/indentured-servitude-money-laundering-and-piles-of-money-the-crazy-secrets-of-internet-cam-girls-nsfw">porn</a>, <a href="http://gizmodo.com/5866347/iran-reveals-captured-american-super-drone-and-its-completely-intact"> drones</a>, <a href="http://gizmodo.com/5981823/beat-by-dre-the-inside-story-of-how-monster-lost-the-world"> headphones</a>, the <a href="http://gizmodo.com/5912383/how-to-destroy-the-internet"> internet</a> (<a href="http://gizmodo.com/5927379/the-secret-online-weapons-store-thatll-sell-anyone-anything">often</a>) and lots of other things.</p>  
+
+  <div class="contact"
   <p><a href="mailto:sambiddle@gmail.com">Send me an email</a> OR <a href="http://twitter.com/samfbiddle">follow me on Twitter.</a></p>
-<br>
+
+  <p>If you want to send an anonymous or off the record tip, <a href="http://gawker.com/how-to-contact-gawker-with-tips-and-leaks-1608929488">here's how.</a></p>
+
+
+
   </div>
 
-<div class="MoreInfo"> 
-<p>I've written about <a href="http://gizmodo.com/5914671/this-is-what-happens-when-anonymous-tries-to-destroy-you">hackers</a>, <a href="http://valleywag.gawker.com/fuck-bitches-get-leid-the-sleazy-frat-emails-of-snap-1582604137">startups</a>, <a href="http://gizmodo.com/5941976/indentured-servitude-money-laundering-and-piles-of-money-the-crazy-secrets-of-internet-cam-girls-nsfw">porn</a>, <a href="http://gizmodo.com/5866347/iran-reveals-captured-american-super-drone-and-its-completely-intact"> drones</a>, <a href="http://gizmodo.com/5981823/beat-by-dre-the-inside-story-of-how-monster-lost-the-world"> headphones</a>, the <a href="http://gizmodo.com/5912383/how-to-destroy-the-internet"> internet</a> (<a href="http://gizmodo.com/5927379/the-secret-online-weapons-store-thatll-sell-anyone-anything">often</a>) and lots of other things.</p>
 
-<p>If you want to send an anonymous or off the record tip, <a href="http://gawker.com/how-to-contact-gawker-with-tips-and-leaks-1608929488">here's how.</a></p>
-</div>
+
 
 
   
