TRAFFIC LIGHT FIXED

--- a/ga_4_traffic_light/index.html
+++ b/ga_4_traffic_light/index.html
@@ -1,3 +1,12 @@
+<DOCTYPE html>
+<html>
+	<head>
+  		<link rel="stylesheet" type="text/css" href="css/main.css"/>
+  		 <script type="text/javascript" src="js/application.js"></script>
+  		<Title>Traffic Light</Title>
+	</head>
+	<body>
+
 <div id="lightBox">
   <div id="green" class="light">
   </div>
@@ -12,3 +21,5 @@
   <p class="button" onclick="buttonClick('yellow')">Caution</p>
   <p class="button" onclick="buttonClick('red')" >Stop</p>
 </div>
+
+</body>
