Making progress on image gallery

--- a/ga_6_gallery/index.html
+++ b/ga_6_gallery/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<head>
-  		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-  		 <script type="text/javascript" src="application.js"></script>
-  		<Title>Gallery</Title>
-	</head>
-	<body>
-
-<div class="galleryContainer">
+<head>
+<link rel="stylesheet" type="text/css" href="css/main.css"/>
+<script type="text/javascript" src="js/gallery.js"></script>
+<Title>Gallery</Title>
+</head>
+<body>
+	<div id="mainContainer">
+		<div id="thumbs">
+			<div class="thumb"><img src="img/image-1.jpg"></div>
+			<div class="thumb"><img src="img/image-2.jpg"></div>
+			<div class="thumb"><img src="img/image-3.jpg"></div>
+			<div class="thumb"><img src="img/image-4.jpg"></div>
+			<div class="thumb"><img src="img/image-5.jpg"></div>
+			<div class="thumb"><img src="img/image-6.jpg"></div>
+			<div class="thumb"><img src="img/image-8.jpg"></div>
 	
+		</div>
+	
+	<div id="mainImg">
+		<img src="img/image-1.jpg">
+	</div>
+	<div id="controls">
+		<span id="prevButton" class="btn"><</span>
+		<span id="nextButton" class="btn">></span>
+	</div>
 </div>
-
-
 </body>
 </html>
