--- a/ga_6_gallery/index.html
+++ b/ga_6_gallery/index.html
@@ -7,24 +7,21 @@
 </head>
 <body>
 	<div id="mainContainer">
-		<div id="thumbs">
-			<div class="thumb"><img src="img/image-1.jpg"></div>
-			<div class="thumb"><img src="img/image-2.jpg"></div>
-			<div class="thumb"><img src="img/image-3.jpg"></div>
-			<div class="thumb"><img src="img/image-4.jpg"></div>
-			<div class="thumb"><img src="img/image-5.jpg"></div>
-			<div class="thumb"><img src="img/image-6.jpg"></div>
-			<div class="thumb"><img src="img/image-8.jpg"></div>
-	
+	<div id="mainImageContainer">
+		<img id="mainImage" src="img/image-1.jpg">
 		</div>
-	
-	<div id="mainImg">
-		<img src="img/image-1.jpg">
+		<div id="thumbs">
+			<div class="thumb" onclick="changePicture(0)"><img src="img/image-0.jpg"></div>
+			<div class="thumb" onclick="changePicture(1)"><img src="img/image-1.jpg"></div>
+			<div class="thumb" onclick="changePicture(2)"><img src="img/image-2.jpg"></div>
+			<div class="thumb" onclick="changePicture(3)"><img src="img/image-3.jpg"></div>
+			<div class="thumb" onclick="changePicture(4)"><img src="img/image-4.jpg"></div>
+			<div class="thumb" onclick="changePicture(5)"><img src="img/image-5.jpg"></div>
+			<div class="thumb" onclick="changePicture(6)"><img src="img/image-7.jpg"></div>
+		</div>
+	<span id="nextButton" class="btn" onclick="nextImage()">NEXT</span>
+			<span id="prevButton" class="btn" onclick="prevImage()">PREV</span>
+		
 	</div>
-	<div id="controls">
-		<span id="prevButton" class="btn"><</span>
-		<span id="nextButton" class="btn">></span>
-	</div>
-</div>
 </body>
 </html>
