--- a/ga_7_rps/index.html
+++ b/ga_7_rps/index.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
 <html>
 <head>
-
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/main.css"/></link>
 </head>
+<body>
+	<div id="header">Let's play ROCK, PAPER, SCISSORS!</div>
+
+	<div>Choose your hand...</div>
+	<select>
+ 		<option value="rock">Rock</option>
+  		<option value="paper">Paper</option>
+  		<option value="scissors">Scissors</option>
+	</select>
+
+<input type="submit" value="Shoot!">
+</body>
 </html>
