--- a/ga_7_rps/index.html
+++ b/ga_7_rps/index.html
@@ -15,6 +15,6 @@
   		<option value="scissors">Scissors</option>
 	</select>
 
-<input type="submit" value="Shoot!">
+	<input type="submit" value="Shoot!" onclick="playGame()">
 </body>
 </html>
